# HRfunc

./: .gitignore  pyproject.toml
src/hrfunc/: hrfunc.py  hrtree.py  observer.py
src/hrfunc/gui/: app.py  events_io.py  state.py  submission.py  workers.py
src/hrfunc/gui/components/: activity_panel.py  dataset_picker.py  dataset_tree.py  export_panel.py  hrf_panel.py  hrtree_match.py  hrtree_panel.py  inspect_panel.py  preprocess_panel.py  quality_panel.py
src/hrfunc/gui/pages/: shell.py
src/hrfunc/hrfs/: hbo_hrfs.json  hbr_hrfs.json
src/hrfunc/io/: detect.py  raw_cache.py
tests/: test_estimate_activity_library.py  test_gui_activity_panel.py  test_gui_activity_per_channel.py  test_gui_bulk_preprocess.py  test_gui_dataset_tree_tick.py  test_gui_estimate_panel.py  test_gui_events_io.py  test_gui_events_panel.py  test_gui_hrf_edge_expansion.py  test_gui_hrf_group_montage.py  test_gui_hrf_save_submit.py  test_gui_hrtree_roi_detail.py  test_gui_library.py  test_gui_preprocess.py  test_gui_quality_panel.py  test_gui_review_bug_sweep.py  test_gui_shell.py  test_gui_ux_review_fixes.py  test_gui_workers_client.py  test_hrtree_match.py  test_montage_provenance.py  test_progress_callbacks.py
