[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hrfunc"
version = "1.3.0"
description = "Tools for modeling HRFs and estimating neural activity from fNIRS brain signals"
readme = "README.md"
requires-python = ">=3.8"
license = "BSD-3-Clause"
authors = [
    { name="Denny Schaedig", email="dennys@wustl.edu" }
    ]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    ]

dependencies = [
    "numpy",
    "mne",
    "mne_nirs",
    "scipy",
    "nilearn",
    "matplotlib",
    "platformdirs>=3.0",
    # GUI stack. The `hrfunc` command IS the desktop GUI, so these are
    # core dependencies rather than an optional extra -- a plain
    # `pip install hrfunc` must give a working app, since the target
    # users are researchers who launch HRfunc as a desktop program and
    # shouldn't have to know about pip extras. (Was a `[gui]` extra
    # pre-1.3.x; promoted to core so `hrfunc` never fails with a bare
    # ModuleNotFoundError on a default install.)
    "nicegui>=2.0",
    "plotly>=5.18",
    "pywebview>=5.0",
    "pyshortcuts>=1.9",
    # Pillow is used by hrfunc.cli.install_shortcut to convert the
    # bundled PNG icon to a real macOS .icns at install time. It also
    # arrives transitively via matplotlib, but spell it out so the
    # shortcut install doesn't depend on transitive coincidence.
    "Pillow>=9.0",
    ]

[project.optional-dependencies]
# The GUI stack moved into core `dependencies` (above), so installing the
# GUI no longer needs an extra. This empty `gui` extra is kept purely so
# existing instructions / scripts that run `pip install hrfunc[gui]`
# don't error on an unknown extra -- it resolves to the (already core)
# GUI deps as a no-op.
gui = []

[project.scripts]
hrfunc = "hrfunc.gui.app:main"

[project.urls]
Homepage = "https://github.com/dennys246/hrfunc"
Documentation = "https://www.hrfunc.org"

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "hrfunc",
    "hrfunc.assets",
    "hrfunc.assets.atlases",
    "hrfunc.cli",
    "hrfunc.io",
    "hrfunc.gui",
    "hrfunc.gui.components",
    "hrfunc.gui.pages",
    "hrfunc.spatial",
    "hrfunc.viz",
    ]
include-package-data = true

[tool.setuptools.package-data]
"hrfunc.assets" = ["*.png", "*.icns", "*.npz"]
"hrfunc.assets.atlases" = ["*.nii.gz", "*.json"]
"hrfunc.hrfs" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# auto mode lets pytest-asyncio recognize async fixtures (like NiceGUI's
# User fixture) without requiring per-fixture asyncio markers. Only affects
# tests that are themselves async; sync tests are unaffected.
asyncio_mode = "auto"
# NiceGUI's User fixture needs a main_file it can import to bootstrap the
# app and discover page routes. tests/gui_main.py imports hrfunc.gui.app
# and calls _register_pages() — minimal shim, not collected as a test.
main_file = "tests/gui_main.py"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring real fNIRS data files",
]
